# sandreco-experimental

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  DartConfiguration.tcl  README.md  geonav.py
docs/: CMakeLists.txt
include/: CMakeLists.txt  ExampleLinkDef.h  common.h  example.h  example1.h  example2.h  grain.h
include/caf/: caf_wrapper.hpp
include/common/: cluster.h  digi.h  hit.h  random_generators.h  sand.h  timerange.h  truth.h
include/common/utils/: list.h
include/ecal/: digi.h  digit.h  pes.h  photo_electron.h  slice.h
include/grain/: digi.h  grain.h  image.h  photons.h  picture.h
include/tracker/: cluster_container.h  digi.h  s_particle_infos.h  tracklet.h  tracklet_map.h  tracklets.h  tracks.h
src/common/: CMakeLists.txt  TFileStreamer.cpp  TFileStreamer.hpp  TObjectWrapper.cpp  TObjectWrapper.hpp  TTreeData.cpp  TTreeData.hpp  TTree_product.cpp  TTree_product.hpp
src/common/root/: CMakeLists.txt  TFileWrapper.hpp  TTreeStreamer.cpp  TTreeStreamer.hpp
src/data/G4_optmen_runmanager/: CMakeLists.txt  G4_optmen_runmanager.cpp  G4_optmen_runmanager.hpp
src/data/caf_srinteraction/: CMakeLists.txt  SRInteractionLinkDef.h  caf_srinteraction.cpp  caf_srinteraction.hpp
src/data/caf_srsand/: CMakeLists.txt  SRSANDLinkDef.h  caf_srsand.cpp  caf_srsand.hpp
src/data/common/EdepReader/: CMakeLists.txt  EDEPHit.h  EDEPTrajectoryPoint.h  EDEPTree.cpp  EDEPTree.h  EdepReader.cpp  EdepReader.hpp
src/data/common/edep_reader/: CMakeLists.txt  EDEPHit.cpp  EDEPHit.h  EDEPTrajectory.cpp  EDEPTrajectory.h  EDEPTrajectoryPoint.h  EDEPTree.cpp  EDEPTree.h  EDEPUtils.h  edep_reader.cpp  edep_reader.hpp
src/data/common/genie_reader/: CMakeLists.txt  GenieWrapper.cpp  GenieWrapper.h  genie_reader.cpp  genie_reader.hpp
src/data/common/geoinfo/: BVH.cpp  BVH.hpp  BVH_analyzer.hpp  CMakeLists.txt  drift_info.cpp  drift_info.hpp  ecal_info.cpp  ecal_info.hpp  generic_drift_info.cpp  generic_drift_info.hpp  geoinfo.cpp  geoinfo.hpp  grain_info.cpp  grain_info.hpp  stt_info.cpp  stt_info.hpp  subdetector_info.cpp  subdetector_info.hpp  tracker_info.cpp  tracker_info.hpp
src/data/common/geomanager/: CMakeLists.txt  drift_manager.cpp  drift_manager.hpp  ecal_manager.cpp  ecal_manager.hpp  geomanager.cpp  geomanager.hpp  grain_manager.cpp  grain_manager.hpp  stt_manager.cpp  stt_manager.hpp  subdetector_manager.cpp  subdetector_manager.hpp  tracker_manager.cpp  tracker_manager.hpp
src/data/common/hdf5/: CMakeLists.txt  hdf5.cpp  hdf5.hpp
src/data/common/ocl/: CMakeLists.txt  ocl.cpp  ocl.hpp
src/data/common/root_tgeomanager/: CMakeLists.txt  root_tgeomanager.cpp  root_tgeomanager.hpp
src/data/example/: CMakeLists.txt  example.cpp
src/data/grain/geant_gdml_parser/: CMakeLists.txt  geant_gdml_parser.cpp  geant_gdml_parser.hpp
src/processes/Geant4_example/: CMakeLists.txt  G4_optmen_edepsim.cpp  G4_optmen_edepsim.hpp  Geant4_example.cpp  OptMenActionInitialization.cc  OptMenActionInitialization.hh  OptMenAnalysisManager.cc  OptMenAnalysisManager.hh  OptMenCosmicMuonGenerator.cc  OptMenCosmicMuonGenerator.hh  OptMenDetectorConstruction.cc  OptMenDetectorConstruction.hh  OptMenEventAction.cc  OptMenEventAction.hh  OptMenEventCounter.cc  OptMenEventCounter.hh  OptMenEventData.cc  OptMenEventData.hh  OptMenGenieGenerator.cc  OptMenGenieGenerator.hh  OptMenOrderFile.cc  OptMenOrderFile.hh  OptMenParticleGun.cc  OptMenParticleGun.hh  OptMenPhotonGenerator.cc  OptMenPhotonGenerator.hh  OptMenPhysicsList.hh  OptMenPrimaryGeneratorAction.cc  OptMenPrimaryGeneratorAction.hh  OptMenReadParameters.cc  OptMenReadParameters.hh  OptMenRunAction.cc  OptMenRunAction.hh  OptMenSensitiveArgon.cc  OptMenSensitiveArgonHit.cc  OptMenSensor.cc  OptMenSensor.h  OptMenSensorHit.cc  OptMenSensorHit.h  OptMenStackingAction.cc  (+6 more)
src/processes/Process_example/: CMakeLists.txt  Process_example.cpp
src/processes/detector_response/: CMakeLists.txt  detector_response.cpp
src/processes/fake_reco/: CMakeLists.txt  fake_reco.cpp  fake_reco.hpp  fields.md
src/processes/fake_reco/caf_handlers/: caf_filler.hpp  caf_filler_common.hpp  caf_filler_reco.cpp  caf_filler_true.cpp  interactions.hpp  particles.hpp  tracks_showers.hpp  utils.hpp
src/processes/produce_srsand/: CMakeLists.txt  produce_srsand.cpp  produce_srsand.hpp
src/processes/read_caf/: CMakeLists.txt  read_caf.cpp  read_caf.hpp
src/processes/time_slicing/: CMakeLists.txt  time_slicing.cpp
src/products/TTree_example/: CMakeLists.txt  TTree_example.cpp
src/streamers/png/: CMakeLists.txt  png_streamer.cpp
tests/: 00_TFileStreamer.test.cpp  00_TTreeStreamer.test.cpp  05_TTreeDataexample.test.cpp  10_Processexample.test.cpp  CMakeLists.txt  TTree_product.test.cpp
tests/data/: CMakeLists.txt  test_sysmatrix_small.h5  tracklets_file.root
tests/framework/: 000_base.json  020_geoinfo.json  021_geoinfo_drift.json  021_geoinfo_generic_drift.json  022_geoinfo_masks.json  030_fast_digi_stt.json  048_opencl_test_device.json  050_tree_streamer_write.json  051_tree_streamer_read.json  052_genie_reader.json  120_grain_optical_simulation.json  120_grain_optical_simulation_masks.json  140_grain_detector_response.json  150_grain_spill_slicer.json  151_grain_manual_spill_slicer.json  160_grain_mask_weights_computation.json  160_tracker_kalman_filter.json  170_grain_volumereco.json  190_grain_full.json  190_grain_full_masks.json  191_grain_full_lenses.json  200_ecal_digi_fast.json  201_ecal_spill_slicing.json  220_tracklet_finder.json  300_fast_digi_stt.json  301_fast_digi_drift.json  400_clustering_stt.json  900_fake_reco_test.json  901_caf_read.json  CMakeLists.txt
tests/standalone/: 00_TTreeStreamer.test.cpp  00_tree_streamer.test.cpp  CMakeLists.txt  fake_reco.test.cpp  hdf5_ndarray.test.cpp  test_helpers.hpp
tests/standalone/fake_reco/: CMakeLists.txt  caf_filler.test.cpp  caf_filler_common.test.cpp  evtcode_parser.test.cpp
tests/standalone/hdf5/: CMakeLists.txt  hdf5_ndarray.test.cpp
tests/standalone/ocl/: CMakeLists.txt  ocl_run_kernel.test.cpp  test_kernel.cl
(+156 files in other folders)
